Move to gradle 8.4 and update dependencies